--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "^14.2.15",
     "@vercel/analytics": "^1.5.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.555.0",
     "next": "15.5.9",
