--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-public/videos/
-public/videos/
+public/videos/*
+!public/videos/finalcwe.mp4
+
